test/libsolidity/syntaxTests/nameAndTypeResolution/fallback_function_in_library.sol
library C {
    function() public {}
}
// ----
// TypeError: (16-36): Libraries cannot have fallback functions.
